kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wmd
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: frontend
              servicePort: 80
          - path: /api/
            pathType: Prefix
            backend:
              serviceName: backend
              servicePort: 5001
          - path: /auth
            pathType: Exact
            backend:
              serviceName: backend-auth
              servicePort: 5002
